# tem2

./: README.md  gazo.py  inventry_gazo.py  pyproject.toml  test.py
