[tool.poetry]
name = "gazo"
version = "0.1.0"
description = ""
authors = ["github <github>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
pillow = "^9.4.0"
plotly-express = "^0.4.1"
streamlit = "^1.19.0"
selenium = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
